--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,9 @@ num-traits = { version = "0.2.15", default-features = false }
 serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
 postcard = "1.0"
 crc = "3"
-ahrs = { git = "https://github.com/KoffeinFlummi/ahrs-rs", default-features = false }
+ahrs = { git = "https://github.com/KoffeinFlummi/ahrs-rs", branch="main", default-features = false }
 nalgebra = { version = "0.31", default-features = false, features = ["alloc", "serde-serialize-no-std", "macros"] }
-filter = { git = "https://github.com/KoffeinFlummi/filter-rs" }
+filter = { git = "https://github.com/KoffeinFlummi/filter-rs", rev="5945c79426c9a16767929eb15a33efa4e51a4a39" }
 siphasher = { version = "0.3", default-features = false }
 rand = { version = "0.8", default-features = false }
 rand_chacha = { version = "0.3", default-features = false }
